# project-sentinel

./: .gitignore  CLAUDE.md  ISSUES.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cd.yml  ci.yml
datasets/: eval_holdout.py  test_dataset.csv
docs/: implementation-plan.md  load-test-report-intra1.md  load-test-report.md  local-dev.md  sentinel-full-plan.md  sentinel-phase0-windows.md
docs/learning/: phase-0-concepts.md  phase-1-concepts.md  phase-2-concepts.md
frontend/: index.html  styles.css
infra/: explanation.md
infra/grafana/: explanation.md
infra/mlflow/: Dockerfile  explanation.md
infra/prometheus/: explanation.md  prometheus.compose.yml  prometheus.yml
ml/optimization/: optimize.py  verify_pipeline.py
orchestration/: drift_dag.py  explanation.md  healthcheck_dag.py  retrain_dag.py
pipelines/drift/: Dockerfile  db.py  drift_job.py  explanation.md  metrics.py  pyproject.toml  spark-application.yaml
pipelines/drift/tests/: conftest.py  test_db.py  test_metrics.py
pipelines/evaluation/: benchmark.py  explanation.md  pyproject.toml  validate.py
pipelines/optimizer/: __main__.py  explanation.md  export.py  optimize.py  pipeline.py  pyproject.toml  quantize.py  registry.py  upload.py
pipelines/retraining/: Dockerfile  __main__.py  dataset.py  explanation.md  pipeline.py  pyproject.toml  train.py
scripts/: check.sh  dev-start.sh  simulate-traces-prod.py  simulate-traces.py  verify-setup.sh
services/classifier/: Dockerfile  batcher.py  config.py  db.py  download.py  explanation.md  main.py  metrics.py  model.py  pyproject.toml  requirements.txt  schemas.py
services/label-ui/: Dockerfile  config.py  explanation.md  main.py  pyproject.toml
services/ml/: pyproject.toml
services/stream-processor/: Dockerfile  explanation.md  main.py  processor.py  pyproject.toml  writer.py
tests/: conftest.py  test_classifier_api.py  test_placeholder.py
tests/integration/: test_classifier_live.py
tests/load/: locustfile.py
tests/unit/: conftest.py  test_classifier_api.py  (+1 more)
web/: script.js
(+18 files in other folders)
