[project]
name = "sentinel"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg>=3.3.4",
]

[tool.uv.workspace]
members = ["services/*", "pipelines/optimizer", "pipelines/evaluation", "pipelines/retraining"]

# CUDA 13.0 wheels — matches the RTX 4070 driver (CUDA Version: 13.0)
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["services/classifier"]
