[project]
name = "sentinel-retraining"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "transformers>=4.48",
    "accelerate>=0.26.0",
    "mlflow>=2.19",
    "pymongo>=4.9",
    "numpy>=2.0",
    "psycopg[binary]>=3.2",
    "sentinel-optimizer",
    "sentinel-evaluation",
]

[tool.uv.sources]
sentinel-optimizer = { workspace = true }
sentinel-evaluation = { workspace = true }
