[project]
name = "sentinel-classifier"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "transformers>=4.48",
    "onnxruntime>=1.27.0",
    "prometheus-client>=0.21",
    "pydantic>=2.10",
    "asyncpg>=0.29",
    "boto3>=1.35",
]
